# jam

./: .gitignore  README.md
contract-ts-test/: package-lock.json
deno-test/: contract.sol  deno.json  readme.md
deno-test/.papi/: polkadot-api.json
deno-test/.papi/descriptors/: package.json
deno-test/.papi/descriptors/src/: common-types.ts  descriptors.ts  hub.ts  hub_metadata.ts  index.ts  local.ts  local_metadata.ts  metadataTypes.ts
deno-test/.papi/metadata/: local.scale
deno-test/src/: api.ts  convert.ts  deploy-evm.ts  deploy.ts  erc20.ts  eth.ts  index.ts  main.ts  verify-viem.ts.bak  verify.ts
docs/: contract.md  network.md  nodes.md  papi.md  polkatool.md  polkavm.md  resolc.md
hardhat-revive-ts/: README.md  hardhat.config.ts  package-lock.json
hardhat-revive-ts/tasks/: deploy-revive.ts
hardhat-viem/: package-lock.json  package.json
papi-asset-hub/: contract.sol  denom.json  deploy-history.md  package.json  readme.md
papi-asset-hub/src/: api.ts  convert.ts  deploy.ts  eth.ts  main.ts  map.ts  mint.ts  revive.ts  selector.ts  signer.ts  verify.ts
runner/: Cargo.toml  example-hello-world.polkavm  readme.md  run.sh
runner/src/: main.rs
rust-contract/: Cargo.toml  build.sh
rust-contract/contract/: Cargo.toml  riscv64emac-unknown-none-polkavm.json
rust-contract/runtiime/: Cargo.toml
rust-contract/src/: allocator.rs  attack.rs  caller.rs  constructor.rs  double.rs  erc20.rs  erc20.sol  erc721.rs  immutable.rs  main.rs  name.rs  selector.rs  storage.rs
rust-contract/src/tests/: test.rs
rust-contract/vm-program/program/: Cargo.toml
rust-contract/vm-program/runner/src/: main.rs
rust-vm/: .gitignore  Cargo.toml  build.sh
rust-vm/runner/: Cargo.toml
rust-vm/srcipts/: build-examples.sh
scripts/: start-debug-sol.sh  start-local.sh
ts-rpc/: package-lock.json  package.json  readme.md
ts-rpc/pvm/: event.asm
ts-rpc/src/: build-contracts.ts  geth-diff-setup.ts  hello.ts
ts-test/: package-lock.json  package.json  tsconfig.json
ts-test/contracts/: PiggyBank.sol  bank.asm  bytecode.txt
ts-test/pvm/: PiggyBank.polkavm
ts-test/src/: compile-pvm.ts  compile.ts  deploy-rust.ts  main.ts  utils.ts
ts-test/src/eth/: address.ts  compile-evm.js  deploy.ts  transfer.ts
ts-test/src/papi/: event.ts  extrinsic.ts  papi.ts  query.ts  revive.ts  sign.ts  utils.ts
type-test/: contract.sol  package.json  readme.md
type-test/src/: deploy-evm.ts  deploy.ts  erc20.ts  eth.ts  map.ts  revive.ts  selector.ts  signer.ts  verify.ts
