[package]
name = "rust-contract-template"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "fibonacci"
path = "src/fibonacci.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "double"
path = "src/double.rs"

[[bin]]
name = "constructor"
path = "src/constructor.rs"

[[bin]]
name = "storage"
path = "src/storage.rs"

[[bin]]
name = "immutable"
path = "src/immutable.rs"

[[bin]]
name = "selector"
path = "src/selector.rs"

[[bin]]
name = "caller"
path = "src/caller.rs"

[[bin]]
name = "erc20"
path = "src/erc20.rs"

[[bin]]
name = "name"
path = "src/name.rs"

[[bin]]
name = "attack"
path = "src/attack.rs"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[dependencies]
polkavm-derive = { version = "0.19.0" }
simplealloc = { version = "0.23.0", git = "https://github.com/paritytech/polkavm.git" }
ethabi = { version = "18.0", default-features = false }
# ethabi-contract = { version = "16.0", default-features = false }
alloy-core = { version = "0.8.20", default-features = false }
# alloy = { version = "0.8.20", default-features = false }
eth-riscv-runtime = { version = "0.1.0", path = "../../../r55/eth-riscv-runtime" }
[dependencies.uapi]
package = "pallet-revive-uapi"
git = "https://github.com/paritytech/polkadot-sdk.git"
default-features = false
features = ["unstable-hostfn"]
