[package]
name = "rust-contract-template"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "fibonacci"
path = "src/fibonacci.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "double"
path = "src/double.rs"

[[bin]]
name = "constructor"
path = "src/constructor.rs"

[[bin]]
name = "storage"
path = "src/storage.rs"

[[bin]]
name = "immutable"
path = "src/immutable.rs"

[[bin]]
name = "selector"
path = "src/selector.rs"

[[bin]]
name = "caller"
path = "src/caller.rs"

[[bin]]
name = "erc20"
path = "src/erc20.rs"

[[bin]]
name = "name"
path = "src/name.rs"

[[bin]]
name = "attack"
path = "src/attack.rs"

[[bin]]
name = "allocator"
path = "src/allocator.rs"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[dependencies]
polkavm-derive = { version = "0.24.0" }
simplealloc = { version = "0.24.0", git = "https://github.com/paritytech/polkavm.git" }
ethabi = { version = "18.0", default-features = false }

[dependencies.uapi]
package = "pallet-revive-uapi"
git = "https://github.com/paritytech/polkadot-sdk.git"
default-features = false
features = ["unstable-hostfn"]
