

[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3
codegen-units = 1
debug = true

[profile.no-lto]
inherits = "release"
lto = false

[workspace]
resolver = "2"
members = [
    "hello-world",
]

[workspace.lints.rust]
unexpected-cfgs = "allow"
static_mut_refs = "allow"

[workspace.dependencies]
polkavm-derive = { version = "0.19.0" }
polkavm = { version = "0.19.0" }
uapi = { package = "pallet-revive-uapi", git = "https://github.com/paritytech/polkadot-sdk.git", rev = "3d8da815ecd12b8f04daf87d6ffba5ec4a181806", default-features = false }
