[package]
name = "example-contract"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "contract"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[dependencies]
polkavm = { workspace = true, default-features = false }
polkavm-derive = { workspace = true }